--- a/src/app/components/form-item/form-item.component.html
+++ b/src/app/components/form-item/form-item.component.html
@@ -7,8 +7,8 @@
         #product="ngModel" />
 
     @if (product.invalid && (product.dirty || product.touched)) {
-        <div class="alert alert-danger m-3">
-            El producto debe tener entre 5 y 20 caracteres.
+        <div class="alert alert-danger m-3" style="padding: 0.5rem;">
+            <small>El producto debe tener entre 5 y 20 caracteres.</small>
         </div>
     }
 
@@ -20,8 +20,8 @@
         #price="ngModel" />
     
     @if (price.invalid && (price.dirty || price.touched)) {
-        <div class="alert alert-danger m-3">
-            El precio debe estar entre 5 y 10000.
+        <div class="alert alert-danger m-3" style="padding: 0.5rem;">
+            <small>El precio debe estar entre 5 y 10000.</small>
         </div>
     }
 
@@ -33,8 +33,8 @@
         #quantity="ngModel" />
 
     @if (quantity.invalid && (quantity.dirty || quantity.touched)) {
-        <div class="alert alert-danger m-3">
-            La cantidad debe ser mayor a 0.
+        <div class="alert alert-danger m-3" style="padding: 0.5rem;">
+            <small>La cantidad debe ser mayor a 0.</small>
         </div>
     }
 
