--- a/src/app/components/usuario/user/user.component.html
+++ b/src/app/components/usuario/user/user.component.html
@@ -1,3 +1,7 @@
+<h3>{{title}}</h3>
+
+<button class="btn btn-primary my-4" [routerLink]="['/users/create']">Crear usuario</button>
+
 @if (users.length === 0) 
 {
     <div class="alert alert-warning">No hay registros en el sistema!</div>
