Agregando paginador al frontend

--- a/src/app/components/usuario/user/user.component.html
+++ b/src/app/components/usuario/user/user.component.html
@@ -35,10 +35,11 @@
                     <td>
                         <button 
                         class="btn btn-warning btn-sm"
-                        (click)="onEditUser(user)">Editar</button>
+                        [routerLink]="['/users/update/', user.id]">Editar</button>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
 }
+<paginator [paginator]="paginator" [url]="pageUrl"></paginator>
