--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,8 +8,7 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" 
-              [routerLink]="['/users']"
-              [state]="{users}">Usuarios</a>
+              [routerLink]="['/users']">Usuarios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/users/create']">Crear usuario</a>
