Agregando modulo de clientes.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,13 +10,8 @@
             <a class="nav-link active" aria-current="page" 
               [routerLink]="['/users']">Usuarios</a>
           </li>
-          @if(admin){
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/users/create']">New User</a>
-            </li>
-          }
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/users/create']">Crear usuario</a>
+            <a class="nav-link" [routerLink]="['/clientes']">Clientes</a>
           </li>
         </ul>
       </div>
