--- a/src/app/components/usuario/user/user.component.html
+++ b/src/app/components/usuario/user/user.component.html
@@ -7,7 +7,7 @@
     <div class="alert alert-warning">No hay registros en el sistema!</div>
 } @else 
 {
-    <table class="table table-hover table-striped">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>Id</th>
