--- a/src/styles.css
+++ b/src/styles.css
@@ -39,3 +39,5 @@
         opacity: 1
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
