WIP: Modulos de facturas y compras

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="card my-3">
         <div class="card-header">
-            <h2>Ejemplo Factura</h2>
+            <h2>Factura {{ invoice.id }}</h2>
         </div>
         <div class="card-body">
 
