--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -18,10 +18,9 @@
         <thead>
           <tr>
             <th>Nombre</th>
-            <th>Apellido</th>
             <th>Email</th>
             <th>Fecha de creacion</th>
-            <th>Facturar</th>
+            <th>Pedido</th>
             <th>Editar</th>
             <th>Eliminar</th>
           </tr>
@@ -30,11 +29,10 @@
           @for (cliente of clientes; track $index) {
               <tr>
                   <td> {{ cliente.nombres }} </td>
-                  <td> {{ cliente.apellidos }} </td>
                   <td> {{ cliente.email }} </td>
                   <td> {{ cliente.fechaNacimiento }} </td>
                   <td>
-                  <button type="button" class="btn btn-success btn-sm" [routerLink]="['/facturas/form', cliente.id]">Facturar</button>
+                  <button type="button" class="btn btn-success btn-sm" [routerLink]="['/pedidos/form', cliente.id]">Crear</button>
                   </td>
                   <td>
                   <button type="button" name="button" [routerLink]="['/clientes/form/', cliente.id]" class="btn btn-primary">Editar</button>
