--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -1,5 +1,5 @@
 <navbar />
-<div class="container my-4">
+<div class="container my-4 main-content">
     <router-outlet/>
 </div>
 <app-footer></app-footer>
