--- a/src/styles.css
+++ b/src/styles.css
@@ -39,5 +39,18 @@
         opacity: 1
     }
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    font-family: Roboto, 
+    "Helvetica Neue", 
+    sans-serif; 
+    padding-bottom: 60px; /* Ensure space for the footer */
+}
+
+.main-content {
+    flex-grow: 1;
+}
