Agregando varios cambios, terminando modulo de pedidos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <!-- <app-invoice></app-invoice> -->
 <!-- <app-login></app-login> -->
- <app-usuario></app-usuario>
+ <!-- <app-usuario></app-usuario> -->
+ <navbar />
+ <div class="container my-4 main-content">
+     <router-outlet/>
+ </div>
+ <app-footer></app-footer>
