--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,12 +6,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" 
               [routerLink]="['/users']">Usuarios</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/clientes']">Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/pedidos']">Pedidos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/compras']">Compras</a>
           </li>
         </ul>
       </div>
