--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -1,99 +1,60 @@
-<div class="card bg-light">
-    <div class="card-header">{{ titulo }}: {{ pedido.descripcion }}</div>
-    <div class="card-body">
-      <h4 class="card-title">
-        <a [routerLink]="['/clientes']" class="btn btn-light btn-xs">&laquo; volver</a>
-      </h4>
-  
-      <form #pedidoForm="ngForm">
-  
-        @if (pedido.cliente) {
-            <div class="form-group row my-2">
-                <label for="" class="col-sm-2 col-form-label">Cliente</label>
-                <div class="col-sm-6">
-                  <input type="text" name="cliente" value="{{pedido.cliente.nombres}}" class="form-control" disabled />
-                </div>
-            </div>
+<!-- <detalle-cliente *ngIf="clienteSeleccionado" [cliente]="clienteSeleccionado"></detalle-cliente> -->
+<div class="card">
+  <div class="card-header">Pedidos</div>
+  <div class="card-body text-primary">
+    <h5 class="card-title">Listado de pedidos </h5>
 
-            <div class="form-group row my-2">
-                <label for="" class="col-sm-2 col-form-label">Direccion</label>
-                <div class="col-sm-6">
-                  <input type="text" name="cliente" value="{{pedido.cliente.direccion}}" class="form-control" disabled />
-                </div>
-            </div>
-        }
-  
-        <div class="form-group row">
-          <label for="" class="col-sm-2 col-form-label">Observacion</label>
-          <div class="col-sm-6 my-2">
-            <textarea name="observacion" [(ngModel)]="pedido.observacion" class="form-control"></textarea>
-          </div>
-        </div>
-  
-        <div class="form-group row">
-          <div class="col-sm-6">
-            <mat-form-field>
-              <input type="text" placeholder="Añadir producto" aria-label="Productos" matInput [formControl]="autoCompleteControl" [matAutocomplete]="auto">
-              <mat-autocomplete #auto="matAutocomplete" [displayWith]="mostrarNombre" (optionSelected)="seleccionarProducto($event)">
-                <mat-option *ngFor="let producto of productosFiltrados | async" [value]="producto">
-                  {{producto.nombre}}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-          </div>
-        </div>
-  
-        @if (pedido.items.length > 0) {
-            <table class="table table-striped table-hover table-sm">
-            <thead>
-                <tr>
-                <th>Articulo</th>
-                <th>Precio venta</th>
-                <th>Cantidad</th>
-                <th>Total</th>
-                <th>Eliminar</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (item of pedido.items; track $index) {
-                    <tr>
-                        <td>{{item.articulo.nombre}}</td>
-                        <!-- <td>{{ MONEDA_LABEL }}</td> -->
-                        <td><input type="number" value="{{item.articulo.valorVenta}}" class="form-control col-sm-4"
-                            (change)="actualizarValorVenta(item.articulo.id, $event)"></td>
-                        <td><input type="number" value="{{item.cantidad}}" class="form-control col-sm-4"
-                        (change)="actualizarCantidad(item.articulo.id, $event)"></td>
-                        @if (item.cantidad) {
-                            <td>{{ MONEDA_LABEL }} {{item.calcularTotalVenta()}}</td>
-                        } @else {
-                            <td></td>
-                        }
-                        
-                        <td><button class="btn btn-danger btn-sm" type="button"
-                        (click)="eliminarItemFactura(item.articulo.id)">x</button></td>
-                    </tr>
-                }
-
-            </tbody>
-            </table>
-            <h5 class="float-right">Gran total:
-                <span class="">{{ MONEDA_LABEL }} {{pedido.calcularGranTotal() | number:'1.2-2'}}</span>
-            </h5>
-        }
-  
-        @if (pedido.items.length == 0) {
-            <div class="alert alert-info my-4">
-                No hay lineas asignadas para el pedido debe agregar almenos una.
-            </div>
-        }
-  
-        <div class="form-group row">
-          <div class="col-sm-6">
-            <input type="submit" (click)="create()" value="Crear pedido" class="btn btn-secondary"
-             [disabled]="pedidoForm.form.invalid || pedido.items.length == 0"/>
-          </div>
-        </div>
-      </form>
+    <div class="my-2 text-left">
+      <button type="button" class="btn btn-rounded btn-primary" name="button" [routerLink]="['/pedidos/form']">Crear pedido</button>
     </div>
+
+    <mat-form-field class="mx-3">
+      <input type="text" placeholder="Buscar pedido" aria-label="Pedidos" matInput (input)="onTextInput($event)">
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-select placeholder="Filtrar por estado" [(value)]="selectedOption" (selectionChange)="onOptionSelected($event)">
+        <mat-option *ngFor="let option of options" [value]="option">
+          {{ option.Name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    @if (pedidos.length<=0) {
+      <div class="alert alert-info">
+        No se encuentran registros en la base de datos!
+      </div>
+
+    } @else {
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Cliente</th>
+            <th>Estado</th>
+            <th>Fecha creación</th>
+            <th>Detalle</th>
+            <th>Anular</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (pedido of pedidos; track $index) {
+              <tr>
+                  <td> {{ pedido.id }} </td>
+                  <td> {{ pedido.cliente }} </td>
+                  <td> {{ pedido.estado }} </td>
+                  <td> {{ pedido.fecha | date:"EEEE dd, MMMM yyyy"}} </td>
+                  <td>
+                  <button type="button" name="button" [routerLink]="['/pedidos/', pedido.id]" class="btn btn-primary">Ver detalle</button>
+                  </td>
+                  <td>
+                  <button type="button" name="button" (click)="delete(pedido)" class="btn btn-danger">Anular</button>
+                  </td>
+              </tr>
+          }
+        </tbody>
+      </table>
+      <paginator [paginator]="paginator" [url]="pageUrl"></paginator>
+    }
   </div>
-  
+</div>
