--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/compras']">Compras</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/inventario']">Inventario</a>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAuth">
