--- a/src/app/components/compras/compra-form/compra-form.component.html
+++ b/src/app/components/compras/compra-form/compra-form.component.html
@@ -1,1 +1,119 @@
-<p>compra-form works!</p>
+<div class="card bg-light">
+    <div class="card-header">{{ titulo }}</div>
+    <div class="card-body">
+      <h4 class="card-title">
+        <a [routerLink]="['/clientes']" class="btn btn-light btn-xs">&laquo; volver</a>
+      </h4>
+  
+      <form #compraForm="ngForm">
+  
+        <div class="form-group row">
+          <div class="col-sm-6">
+            <mat-form-field>
+              <input type="text" placeholder="Buscar cliente" aria-label="Clientes" matInput [formControl]="autoCompleteControlCliente" [matAutocomplete]="autoClientes">
+              <mat-autocomplete #autoClientes="matAutocomplete" [displayWith]="mostrarNombreProveedor" (optionSelected)="seleccionarProveedor($event)">
+                <mat-option *ngFor="let proveedor of clientesFiltrados | async" [value]="proveedor">
+                  {{proveedor.nombres}}
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+        </div>
+
+        @if (proveedor) {
+            <div class="form-group row my-2">
+                <label for="" class="col-sm-2 col-form-label">Cliente</label>
+                <div class="col-sm-6">
+                  <input type="text" name="cliente" value="{{proveedor.nombres}}" class="form-control" disabled />
+                </div>
+            </div>
+
+            <div class="form-group row my-2">
+                <label for="" class="col-sm-2 col-form-label">Direccion</label>
+                <div class="col-sm-6">
+                  <input type="text" name="cliente" value="{{proveedor.direccion}}" class="form-control" disabled />
+                </div>
+            </div>
+
+            <div class="form-group row my-2">
+                <label for="" class="col-sm-2 col-form-label">NIT</label>
+                <div class="col-sm-6">
+                  <input type="text" name="cliente" value="{{proveedor.nit}}" class="form-control" disabled />
+                </div>
+            </div>
+        }
+  
+        <div class="form-group row">
+          <label for="" class="col-sm-2 col-form-label">Observacion</label>
+          <div class="col-sm-6 my-2">
+            <textarea name="observacion" [(ngModel)]="compra.observaciones" class="form-control"></textarea>
+          </div>
+        </div>
+  
+        <div class="form-group row">
+          <div class="col-sm-6">
+            <mat-form-field>
+              <input type="text" placeholder="Añadir articulo" aria-label="Articulos" matInput [formControl]="autoCompleteControl" [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete" [displayWith]="mostrarNombre" (optionSelected)="seleccionarProducto($event)">
+                <mat-option *ngFor="let producto of productosFiltrados | async" [value]="producto">
+                  {{producto.nombre}}
+                </mat-option>
+              </mat-autocomplete>
+            </mat-form-field>
+          </div>
+        </div>
+  
+        @if (compra.items.length > 0) {
+            <table class="table table-striped table-hover table-sm">
+            <thead>
+                <tr>
+                <th>Articulo</th>
+                <th>Precio Compra</th>
+                <th>Cantidad</th>
+                <th>Total</th>
+                <th>Eliminar</th>
+                </tr>
+            </thead>
+            <tbody>
+                @for (item of compra.items; track $index) {
+                    <tr>
+                        <td>{{item.articulo.nombre}}</td>
+                        <!-- <td>{{ MONEDA_LABEL }}</td> -->
+                        <td><input type="number" value="{{item.articulo.valorVenta}}" class="form-control col-sm-4"
+                            (change)="actualizarValorCompra(item.articulo.id, $event)"></td>
+                        <td><input type="number" value="{{item.cantidad}}" class="form-control col-sm-4"
+                        (change)="actualizarCantidad(item.articulo.id, $event)"></td>
+                        @if (item.cantidad) {
+                            <td>{{ MONEDA_LABEL }} {{item.calcularTotalVenta()}}</td>
+                        } @else {
+                            <td></td>
+                        }
+                        
+                        <td><button class="btn btn-danger btn-sm" type="button"
+                        (click)="eliminarItemFactura(item.articulo.id)">x</button></td>
+                    </tr>
+                }
+
+            </tbody>
+            </table>
+            <h5 class="float-right">Gran total:
+                <span class="">{{ MONEDA_LABEL }} {{compra.calcularGranTotal() | number:'1.2-2'}}</span>
+            </h5>
+        }
+  
+        @if (compra.items.length == 0) {
+            <div class="alert alert-info my-4">
+                No hay lineas asignadas para el pedido debe agregar almenos una.
+            </div>
+        }
+  
+        <div class="form-group row">
+          <div class="col-sm-6">
+            <input type="submit" (click)="create()" value="Crear pedido" class="btn btn-secondary"
+             [disabled]="compraForm.form.invalid || compra.items.length == 0"/>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  
