--- a/src/app/components/compras/compra-form/compra-form.component.html
+++ b/src/app/components/compras/compra-form/compra-form.component.html
@@ -10,9 +10,9 @@
         <div class="form-group row">
           <div class="col-sm-6">
             <mat-form-field>
-              <input type="text" placeholder="Buscar cliente" aria-label="Clientes" matInput [formControl]="autoCompleteControlCliente" [matAutocomplete]="autoClientes">
+              <input type="text" placeholder="Buscar proveedores" aria-label="Proveedores" matInput [formControl]="autoCompleteControlProveedor" [matAutocomplete]="autoClientes">
               <mat-autocomplete #autoClientes="matAutocomplete" [displayWith]="mostrarNombreProveedor" (optionSelected)="seleccionarProveedor($event)">
-                <mat-option *ngFor="let proveedor of clientesFiltrados | async" [value]="proveedor">
+                <mat-option *ngFor="let proveedor of proveedoresFiltrados | async" [value]="proveedor">
                   {{proveedor.nombres}}
                 </mat-option>
               </mat-autocomplete>
@@ -42,6 +42,13 @@
                 </div>
             </div>
         }
+
+        <div class="form-group row my-2">
+          <label for="" class="col-sm-2 col-form-label">Número factura</label>
+          <div class="col-sm-6">
+            <input type="text" name="cliente" [(ngModel)]="compra.no_factura" class="form-control" />
+          </div>
+        </div>
   
         <div class="form-group row">
           <label for="" class="col-sm-2 col-form-label">Observacion</label>
@@ -63,7 +70,7 @@
           </div>
         </div>
   
-        @if (compra.items.length > 0) {
+        @if (compra.detalle_factura.length > 0) {
             <table class="table table-striped table-hover table-sm">
             <thead>
                 <tr>
@@ -75,22 +82,22 @@
                 </tr>
             </thead>
             <tbody>
-                @for (item of compra.items; track $index) {
+                @for (item of compra.detalle_factura; track $index) {
                     <tr>
-                        <td>{{item.articulo.nombre}}</td>
+                        <td>{{item.articuloid.nombre}}</td>
                         <!-- <td>{{ MONEDA_LABEL }}</td> -->
-                        <td><input type="number" value="{{item.articulo.valorVenta}}" class="form-control col-sm-4"
-                            (change)="actualizarValorCompra(item.articulo.id, $event)"></td>
+                        <td><input type="number" value="{{item.articuloid.valorCosto}}" class="form-control col-sm-4"
+                            (change)="actualizarValorCompra(item.articuloid.id, $event)"></td>
                         <td><input type="number" value="{{item.cantidad}}" class="form-control col-sm-4"
-                        (change)="actualizarCantidad(item.articulo.id, $event)"></td>
+                        (change)="actualizarCantidad(item.articuloid.id, $event)"></td>
                         @if (item.cantidad) {
-                            <td>{{ MONEDA_LABEL }} {{item.calcularTotalVenta()}}</td>
+                            <td>{{ MONEDA_LABEL }} {{item.calcularTotalCosto()}}</td>
                         } @else {
                             <td></td>
                         }
                         
                         <td><button class="btn btn-danger btn-sm" type="button"
-                        (click)="eliminarItemFactura(item.articulo.id)">x</button></td>
+                        (click)="eliminarItemFactura(item.articuloid.id)">x</button></td>
                     </tr>
                 }
 
@@ -101,16 +108,16 @@
             </h5>
         }
   
-        @if (compra.items.length == 0) {
+        @if (compra.detalle_factura.length == 0) {
             <div class="alert alert-info my-4">
-                No hay lineas asignadas para el pedido debe agregar almenos una.
+                No hay lineas asignadas para la compra debe agregar almenos una.
             </div>
         }
   
         <div class="form-group row">
           <div class="col-sm-6">
-            <input type="submit" (click)="create()" value="Crear pedido" class="btn btn-secondary"
-             [disabled]="compraForm.form.invalid || compra.items.length == 0"/>
+            <input type="submit" (click)="create()" value="Crear compra" class="btn btn-secondary"
+             [disabled]="compraForm.form.invalid || compra.detalle_factura.length == 0"/>
           </div>
         </div>
       </form>
