Modulo de facturas y ajustes generales

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="card" style="background-color: #A8D0F0;">
     <div class="card-header">
-        <h5 class="card-title">Login Page</h5>
+        <h5 class="card-title">Inicio de sesion</h5>
     </div>
 
     <div class="card-body">
