--- a/src/app/components/inventario/inventario.component.html
+++ b/src/app/components/inventario/inventario.component.html
@@ -9,7 +9,7 @@
       </div>
   
       <mat-form-field class="mx-3">
-        <input type="text" placeholder="Buscar pedido" aria-label="Pedidos" matInput (input)="onTextInput($event)">
+        <input type="text" placeholder="Buscar articulo" aria-label="Pedidos" matInput (input)="onTextInput($event)">
       </mat-form-field>
   
       @if (articulos.length<=0) {
