--- a/src/app/components/facturas/facturas.component.html
+++ b/src/app/components/facturas/facturas.component.html
@@ -1,103 +1,49 @@
-<div class="card bg-light">
-    <div class="card-header">{{ titulo }}: {{ factura.descripcion }}</div>
-    <div class="card-body">
-      <h4 class="card-title">
-        <a [routerLink]="['/clientes']" class="btn btn-light btn-xs">&laquo; volver</a>
-      </h4>
+<div class="card">
+    <div class="card-header">Facturas</div>
+    <div class="card-body text-primary">
+      <h5 class="card-title">Listado de facturas </h5>
   
-      <form #facturaForm="ngForm">
+      <mat-form-field class="mx-3">
+        <input type="text" placeholder="Buscar factura" aria-label="Facturas" matInput (input)="onTextInput($event)">
+      </mat-form-field>
   
-        @if (factura.cliente) {
-            <div class="form-group row">
-                <label for="" class="col-sm-2 col-form-label">Cliente</label>
-                <div class="col-sm-6">
-                  <input type="text" name="cliente" value="{{factura.cliente.nombres}} {{factura.cliente.apellidos}}" class="form-control" disabled />
-                </div>
-            </div>
-        }
-        
-        <div class="form-group row">
-          <label for="" class="col-sm-2 col-form-label">Descripción</label>
-          <div class="col-sm-6">
-            <input type="text" name="descripcion" [(ngModel)]="factura.descripcion"
-            class="form-control my-2" required #descripcion="ngModel"/>
-            @if (descripcion.invalid && descripcion.touched) {
-                <div class="alert alert-danger">
-                    La descripcion es requerida
-                  </div>
-            }
-          </div>
+      @if (facturas.length<=0) {
+        <div class="alert alert-info">
+          No se encuentran registros en la base de datos!
         </div>
   
-        <div class="form-group row">
-          <label for="" class="col-sm-2 col-form-label">Observacion</label>
-          <div class="col-sm-6 my-2">
-            <textarea name="observacion" [(ngModel)]="factura.observacion" class="form-control"></textarea>
-          </div>
-        </div>
-  
-        <div class="form-group row">
-          <div class="col-sm-6">
-            <mat-form-field>
-              <input type="text" placeholder="Añadir producto" aria-label="Productos" matInput [formControl]="autoCompleteControl" [matAutocomplete]="auto">
-              <mat-autocomplete #auto="matAutocomplete" [displayWith]="mostrarNombre" (optionSelected)="seleccionarProducto($event)">
-                <mat-option *ngFor="let producto of productosFiltrados | async" [value]="producto">
-                  {{producto.nombre}}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-          </div>
-        </div>
-  
-        @if (factura.items.length > 0) {
-            <table class="table table-striped table-hover table-sm">
-            <thead>
+      } @else {
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th>Id</th>
+              <th>Cliente</th>
+              <th>Factura</th>
+              <th>Fecha creación</th>
+              <th>Detalle</th>
+              <th>Anular</th>
+            </tr>
+          </thead>
+          <tbody>
+            @for (factura of facturas; track $index) {
                 <tr>
-                <th>Producto</th>
-                <th>Precio</th>
-                <th>Cantidad</th>
-                <th>Total</th>
-                <th>Eliminar</th>
+                    <td> {{ factura.id }} </td>
+                    <td> {{ factura.nombre_emisor }} </td>
+                    <td> {{ factura.no_factura }} </td>
+                    <td> {{ factura.fecha_creacion | date:"EEEE dd, MMMM yyyy"}} </td>
+                    <td>
+                    <button type="button" name="button" [routerLink]="['/facturas/', factura.id]" class="btn btn-primary">Ver detalle</button>
+                    </td>
+                    <td>
+                    <button type="button" name="button" (click)="delete(factura)" class="btn btn-danger">Anular</button>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @for (item of factura.items; track $index) {
-                    <tr>
-                        <td>{{item.articulo.nombre}}</td>
-                        <td>{{item.articulo.valorVenta}}</td>
-                        <td><input type="number" value="{{item.cantidad}}" class="form-control col-sm-4"
-                        (change)="actualizarCantidad(item.articulo.id, $event)"></td>
-                        @if (item.cantidad) {
-                            <td>{{item.calcularTotalVenta()}}</td>
-                        } @else {
-                            <td></td>
-                        }
-                        
-                        <td><button class="btn btn-danger btn-sm" type="button"
-                        (click)="eliminarItemFactura(item.articulo.id)">x</button></td>
-                    </tr>
-                }
+            }
+          </tbody>
+        </table>
 
-            </tbody>
-            </table>
-            <h5 class="float-right">Gran total:
-                <span class="">{{ MONEDA_LABEL }} {{factura.calcularGranTotal()}}</span>
-            </h5>
-        }
-  
-        @if (factura.items.length == 0) {
-            <div class="alert alert-info my-4">
-                No hay lineas asignadas para la factura debe agregar almenos una.
-            </div>
-        }
-  
-        <div class="form-group row">
-          <div class="col-sm-6">
-            <input type="submit" (click)="create()" value="Crear factura" class="btn btn-secondary"
-             [disabled]="facturaForm.form.invalid || factura.items.length == 0"/>
-          </div>
-        </div>
-      </form>
+        <paginator [paginator]="paginator" [url]="pageUrl"></paginator>
+      }
     </div>
   </div>
   
