--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,41 +1,45 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">FraterPlus</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <!-- <li class="nav-item">
-            <a class="nav-link active" aria-current="page" 
-              [routerLink]="['/users']">Usuarios</a>
-          </li> -->
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/clientes']">Clientes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/pedidos']">Pedidos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/compras']">Compras</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/inventario']">Inventario</a>
-          </li>
-        </ul>
-      </div>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAuth">
-        <span class="nav-item nav-link text-primary mx-3">
-            @if(login.isAuth){
-                {{ login.user.username }}
-                <button
-                (click)="handlerLogout()"
-                class="btn btn-outline-success">Logout</button>
-            } @else {
-                <a class="btn btn-outline-primary"
-                [routerLink]="['/login']">Sign In</a>
-            }
-        </span>
+<nav class="navbar navbar-expand-lg" style="background-color: #A8D0F0;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#" style="color: #FFFFFF;">FraterPlus</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/pedidos']" style="color: #FFFFFF;">Pedidos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/compras']" style="color: #FFFFFF;">Compras</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/facturas']" style="color: #FFFFFF;">Facturas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/inventario']" style="color: #FFFFFF;">Inventario</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/proveedores']" style="color: #FFFFFF;">Proveedores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/clientes']" style="color: #FFFFFF;">Clientes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/articulos']" style="color: #FFFFFF;">Articulos</a>
+        </li>
+      </ul>
     </div>
-    </div>
-  </nav>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAuth">
+      <span class="nav-item nav-link text-primary mx-3" style="color: #FFFFFF;">
+          @if(login.isAuth){
+              {{ login.user.username }}
+              <button
+              (click)="handlerLogout()"
+              class="btn btn-outline-success" style="border-color: #F4A261; color: #F4A261;">Logout</button>
+          } @else {
+              <a class="btn btn-outline-primary" [routerLink]="['/login']" style="border-color: #F08080; color: #F08080;">Sign In</a>
+          }
+      </span>
+  </div>
+  </div>
+</nav>
