--- a/src/app/components/proveedores/proveedor-form/proveedor-form.component.html
+++ b/src/app/components/proveedores/proveedor-form/proveedor-form.component.html
@@ -1,1 +1,90 @@
-<p>proveedor-form works!</p>
+<div class="card bg-dark text-white my-3">
+    <div class="card-header">
+      {{ titulo }}
+    </div>
+  
+    <div class="card-body">
+  
+  
+      <form #clienteForm="ngForm">
+        <!-- Nombre -->
+        <div class="form-group row my-2">
+          <label for="nombre" class="col-form-label col-sm-2">Nombre</label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control" [(ngModel)]="proveedor.nombres" name="nombre" required minlength="4" #nombre="ngModel">
+            
+            <!-- Validacion de campos -->
+            @if (nombre.invalid && (nombre.dirty || nombre.touched) && nombre.errors!['required']) {
+                <div class="alert alert-danger my-2" style="padding: 0.5rem;">
+                    <small>Nombre es requerido</small>
+                </div>
+            }
+
+          </div>
+        </div>
+
+        <!-- Direccion -->
+        <div class="form-group row my-2">
+          <label for="direccion" class="col-form-label col-sm-2">Direccion</label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control" [(ngModel)]="proveedor.direccion" name="direccion" required #direccion="ngModel"> <!-- required -->
+            
+            @if (direccion.invalid && (direccion.dirty || direccion.touched)) {
+              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
+                <small>La dirección es requerida</small>
+              </div>
+            }
+          </div>
+        </div>
+
+        <!-- Telefono -->
+        <div class="form-group row my-2">
+          <label for="telefono" class="col-form-label col-sm-2">Telefono</label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control" [(ngModel)]="proveedor.telefono" name="telefono" required #telefono="ngModel"> <!-- required -->
+            
+            @if (telefono.invalid && (telefono.dirty || telefono.touched)) {
+              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
+                <small>El telefono es requerido</small>
+              </div>
+            }
+          </div>
+        </div>
+
+        <!-- Extension -->
+        <div class="form-group row my-2">
+          <label for="extension" class="col-form-label col-sm-2">extension</label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control" [(ngModel)]="proveedor.extension" name="extension" #extension="ngModel">
+
+          </div>
+        </div>
+  
+        <!-- Email -->
+        <div class="form-group row my-2">
+          <label for="email" class="col-form-label col-sm-2">Email</label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control" [(ngModel)]="proveedor.correo" name="email" email #email="ngModel">
+          </div>
+        </div> 
+
+        <!-- NIT -->
+        <div class="form-group row my-2">
+            <label for="nit" class="col-form-label col-sm-2">NIT</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" [(ngModel)]="proveedor.nit" name="nit" nit #nit="ngModel">
+            </div>
+        </div> 
+  
+        <div class="form-group row px-2">
+          <div class="col-sm-6">
+            @if (!proveedor.id) {
+              <button class="btn btn-primary" role="button" (click)="create()" [disabled]="!clienteForm.form.valid">Crear</button>
+            } @else {
+              <button class="btn btn-primary" role="button" (click)="update()" [disabled]="!clienteForm.form.valid">Editar</button>
+            }
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
