--- a/src/app/components/clientes/cliente-form/cliente-form.component.html
+++ b/src/app/components/clientes/cliente-form/cliente-form.component.html
@@ -11,37 +11,17 @@
         <div class="form-group row my-2">
           <label for="nombre" class="col-form-label col-sm-2">Nombre</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control" [(ngModel)]="cliente.nombres" name="nombre" required minlength="4" #nombre="ngModel">
+            <input type="text" class="form-control" [(ngModel)]="cliente.nombres" name="nombre" required #nombre="ngModel">
             
             <!-- Validacion de campos -->
             @if (nombre.invalid && (nombre.dirty || nombre.touched)) {
               @if (nombre.errors!['required']) {
                 <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                  <small>Nombre es requerido</small>
+                  <small>El Nombre es requerido</small>
                 </div>
               } 
-              @else if (nombre.errors!['minlength']) 
-              {
-                <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                  <small>Nombre debe tener al menos 4 caracteres</small>
-                </div>
-              }
             }
 
-          </div>
-        </div>
-  
-        <!-- Apellido -->
-        <div class="form-group row my-2">
-          <label for="apellido" class="col-form-label col-sm-2">Apellido</label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control" [(ngModel)]="cliente.apellidos" name="apellido" required #apellido="ngModel"> <!-- required -->
-            
-            @if (apellido.invalid && (apellido.dirty || apellido.touched)) {
-              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                <small>Apellido es requerido</small>
-              </div>
-            }
           </div>
         </div>
 
@@ -61,67 +41,27 @@
 
         <!-- Telefono -->
         <div class="form-group row my-2">
-          <label for="telefono" class="col-form-label col-sm-2">telefono</label>
+          <label for="telefono" class="col-form-label col-sm-2">Telefono</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" [(ngModel)]="cliente.telefono" name="telefono" required #telefono="ngModel"> <!-- required -->
-            
-            @if (telefono.invalid && (telefono.dirty || telefono.touched)) {
-              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                <small>El telefono es requerido</small>
-              </div>
-            }
+            <input type="number" class="form-control" [(ngModel)]="cliente.telefono" name="telefono" #telefono="ngModel"> <!-- required -->
           </div>
         </div>
 
         <!-- Extension -->
         <div class="form-group row my-2">
-          <label for="extension" class="col-form-label col-sm-2">extension</label>
+          <label for="extension" class="col-form-label col-sm-2">Extension</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" [(ngModel)]="cliente.extension" name="extension" required #extension="ngModel"> <!-- required -->
-            
-            @if (extension.invalid && (extension.dirty || extension.touched)) {
-              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                <small>El extension es requerido</small>
-              </div>
-            }
+            <input type="number" class="form-control" [(ngModel)]="cliente.extension" name="extension" #extension="ngModel"> <!-- required -->
           </div>
         </div>
   
         <!-- Email -->
         <div class="form-group row my-2">
-          <label for="email" class="col-form-label col-sm-2">Email</label>
+          <label for="email" class="col-form-label col-sm-2">Correo</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email" required email #email="ngModel">
-
-            @if (email.invalid && (email.dirty || email.touched)) {
-              @if (email.errors!['required']) {
-                <div class="alert alert-danger" style="padding: 0.5rem;">
-                  <small>Correo es requerido</small>
-                </div>
-              } @else if (email.errors!['email']) {
-                <div class="alert alert-danger" style="padding: 0.5rem;">
-                  <small>El correo no es una direccion valida</small>
-                </div>
-              }
-            }
+            <input type="text" class="form-control" [(ngModel)]="cliente.correo" name="email" email #email="ngModel">
           </div>
         </div>
-  
-        <!-- Fecha de nacimiento -->
-        <div class="form-group row my-2">
-          <label for="fechaNacimiento" class="col-form-label col-sm-2">Fecha de creacion</label>
-          <div class="col-sm-6">
-            <input matInput [matDatepicker]="picker" class="form-control" [(ngModel)]="cliente.fechaNacimiento" required #fechaNacimiento="ngModel" name="fechaNacimiento" style="display: inline; width: 300px;">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker touchUi #picker></mat-datepicker>
-            
-            @if (fechaNacimiento.invalid && (fechaNacimiento.dirty || fechaNacimiento.touched)) {
-              <div class="alert alert-danger my-2" style="padding: 0.5rem;">
-                <small>Fecha de nacimiento es requerido</small>
-              </div>
-            }
-          </div>
-        </div>  
   
         <div class="form-group row px-2">
           <div class="col-sm-6">
