--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -18,7 +18,7 @@
         <thead>
           <tr>
             <th>Nombre</th>
-            <th>Email</th>
+            <th>Direccion</th>
             <th>Fecha de creacion</th>
             <th>Pedido</th>
             <th>Editar</th>
@@ -29,8 +29,8 @@
           @for (cliente of clientes; track $index) {
               <tr>
                   <td> {{ cliente.nombres }} </td>
-                  <td> {{ cliente.email }} </td>
-                  <td> {{ cliente.fechaNacimiento }} </td>
+                  <td> {{ cliente.direccion }} </td>
+                  <td> {{ cliente.fechaCreacion }} </td>
                   <td>
                   <button type="button" class="btn btn-success btn-sm" [routerLink]="['/pedidos/form', cliente.id]">Crear</button>
                   </td>
