--- a/src/app/components/pedidos/pedido-form/pedido-form.component.html
+++ b/src/app/components/pedidos/pedido-form/pedido-form.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">{{ titulo }}: {{ pedido.descripcion }}</div>
     <div class="card-body">
       <h4 class="card-title">
-        <a [routerLink]="['/clientes']" class="btn btn-light btn-xs">&laquo; volver</a>
+        <a [routerLink]="['/pedidos']" class="btn btn-light btn-xs">&laquo; volver</a>
       </h4>
   
       <form #pedidoForm="ngForm">
