Agregando ids de navbar y cambiando puerto backend

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,13 +13,13 @@
           <a class="nav-link" [routerLink]="['/compras']" style="color: #FFFFFF;">Compras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/facturas']" style="color: #FFFFFF;">Facturas</a>
+          <a class="nav-link" id="Facturas" [routerLink]="['/facturas']" style="color: #FFFFFF;">Facturas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/inventario']" style="color: #FFFFFF;">Inventario</a>
+          <a class="nav-link" id="Inventario" [routerLink]="['/inventario']" style="color: #FFFFFF;">Inventario</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/proveedores']" style="color: #FFFFFF;">Proveedores</a>
+          <a class="nav-link" id="Proveedores" [routerLink]="['/proveedores']" style="color: #FFFFFF;">Proveedores</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/clientes']" style="color: #FFFFFF;">Clientes</a>
